=======
CHANGES
=======

3.4.1 (unreleased)
------------------

- Feature: Recursive translations of message strings with mappings
  (https://bugs.launchpad.net/zope3/+bug/210177), thanks to Hermann
  Himmelbauer for the inital patch.

3.4.0 (2007-10-02)
------------------

- Updated meta-data. No code changes.


3.4.0b5 (2007-08-15)
--------------------

- Bug: Fixed dependency on ``zope.component`` to require it with the 'zcml'
  extra instead of requiring ``zope.security`` directly.


3.4.0b4 (2007-07-19)
--------------------

- Bug: Number parsing was too forgiving, allowing non-numerical and/or
  formatting characters before, after and within the number. The parsing is
  more strict now.


3.4.0b3 (2007-06-28)
--------------------

- Bug: There was a bug in the parser that if no decimal place is given
  you still had to type the decimal symbol. Corrected this problem (one
  character ;-) and provided a test.


3.4.0b2 (2007-06-25)
--------------------

- Feature: Added ability to change the output type when parsing a
  number.


3.4.0b1 (?)
-----------

- Bug: Fixed dependency on ``zope.security`` to require a version that
  does not have the hidden dependency on ``zope.testing``.


Note: Releases between 3.2.0 and 3.4.0b1 were not tracked as individual
packages. The changes can be reconstructed from the Zope 3 changelog.


3.2.0 (2006-01-05)
------------------

- Corresponds to the verison of the zope.i18n package shipped as part of the
  Zope 3.2.0 release.

- Added a picklable offset-based timezone to 'pytz', a la
  zope.app.datetimeutils'.  Added tests in 'zope.i18n' to show that we need
  something like it, and then actually use it in 'zope.18n.format'.

- Added support for parsing / formatting timezones using 'pytz' (new external
  dependency).

- Implemented remaining date/time formatters, including adding week
  information to the calendar.


3.0.0 (2004-11-07)
------------------

- Corresponds to the version of the zope.i18n package shipped as part of