@@ -51,6 +51,39 @@ class DirectivesTest(PlacelessSetup, unittest.TestCase):
         self.assertEquals(util._catalogs,
                           {'test': ['test'], 'en': [unicode(path)]})
 
+    def testRegisterDistributedTranslations(self):
+        self.assert_(zope.component.queryUtility(ITranslationDomain) is None)
+        xmlconfig.string(
+            template % '''
+            <configure package="zope.i18n.tests">
+            <i18n:registerTranslations directory="locale" />
+            </configure>
+            ''', self.context)
+        xmlconfig.string(
+            template % '''
+            <configure package="zope.i18n.tests">
+            <i18n:registerTranslations directory="locale2" />
+            </configure>
+            ''', self.context)
+        path1 = os.path.join(os.path.dirname(zope.i18n.tests.__file__),
+                             'locale', 'en', 'LC_MESSAGES', 'zope-i18n.mo')
+        path2 = os.path.join(os.path.dirname(zope.i18n.tests.__file__),
+                             'locale2', 'en', 'LC_MESSAGES', 'zope-i18n.mo')
+        util = zope.component.getUtility(ITranslationDomain, 'zope-i18n')
+        self.assertEquals(util._catalogs,
+                          {'test': ['test', 'test'],
+                                   'en': [unicode(path1), unicode(path2)]})
+
+        msg = util.translate(u'Additional message', target_language='en')
+        self.assertEquals(msg, u'Additional message translated')
+
+        msg = util.translate(u'New Domain', target_language='en')
+        self.assertEquals(msg, u'New Domain translated')
+
+        msg = util.translate(u'New Language', target_language='en')
+        self.assertEquals(msg, u'New Language translated')
+
+
 def test_suite():
     return unittest.makeSuite(DirectivesTest)
 
